// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Manage - Request Job Modal should render job selection form component and a 'New Job' link when newFormEnabled is false 1`] = `
<pf-request-job-modal
  exchange={[Function Object]}
  exchange$={[Function Observable]}
  exchangeJobRequestForm={[Function FormGroup]}
  exchangeRequestModalOpen$={[Function Store]}
  exchangeRequestSubmitting$={[Function Store]}
  exchangeSubscription={[Function Subscriber]}
  fb={[Function FormBuilder]}
  newJobFormEnabled="false"
  sharedPeerStore={[Function Store]}
  store={[Function Store]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-valid"
    title="Request Exchange Job"
  >
    
    
    
    
    <pf-payfactors-job-selection-form />
    
    <a
      href="javascript:void(0)"
    >
      New Job
    </a>
  </pf-modal-form>
</pf-request-job-modal>
`;

exports[`Peer - Manage - Request Job Modal should render new job form component and an 'Existing Jobs' link when newFormEnabled is true 1`] = `
<pf-request-job-modal
  exchange={[Function Object]}
  exchange$={[Function Observable]}
  exchangeJobRequestForm={[Function FormGroup]}
  exchangeRequestModalOpen$={[Function Store]}
  exchangeRequestSubmitting$={[Function Store]}
  exchangeSubscription={[Function Subscriber]}
  fb={[Function FormBuilder]}
  newJobFormEnabled={[Function Boolean]}
  sharedPeerStore={[Function Store]}
  store={[Function Store]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-valid"
    title="Request Exchange Job"
  >
    
    
    
    <pf-new-job-form />
    
    
    <a
      href="javascript:void(0)"
    >
      Existing Jobs
    </a>
  </pf-modal-form>
</pf-request-job-modal>
`;
